--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,14 +1,96 @@
 @import 'vendor/reset.min'
+@import 'partials/fonts'
 
-#simulation
-    background: #555
+=animation($timing)
+    transition: all $timing cubic-bezier(0.68, -0.55, 0.265, 1.55)
 
-.block
-    width: 40px
-    height: 40px
-    position: relative
-    right: 20px
+*
+    box-sizing: border-box
+
+html, body, #sidebar
+    height: 100%
+
+.nav-active
+    padding-left: 300px
+
+    #sidebar
+        left: -50px
+
+    #sidebar-toggle
+        left: -50px
+
+body
+    +animation(500ms)
+
+#sidebar
+    max-width: 350px
+    width: 100%
+    height: 100%
+    padding-top: 80px
+    padding-left: 50px
+    background: #333333
+    position: fixed
+    left: -350px
+    +animation(500ms)
+
+#sidebar-toggle
+    max-width: 400px
+    width: 100%
+    height: 50px
+    position: fixed
     top: 20px
-    background: url('../img/wrumm.png') no-repeat
-    background-size: contain
-    background-position: center center
+    background-color: #F00
+    left: -350px
+    z-index: 999
+    padding-left: 50px
+    +animation(500ms)
+    
+    #project-title
+        float: left
+        max-width: 300px
+        width: 100%
+        height: 50px
+        line-height: 50px
+        font-size: 40px
+        text-align: center
+
+    #toggle-button
+        background-color: #090
+        width: 50px
+        height: 50px
+        float: left
+        transition: all 250ms ease
+
+        &:hover
+            background-color: #0F0
+
+.data-group
+    padding: 20px 10px
+
+.bar
+    width: 100%
+    height: 5px
+    background-color: #CCC
+
+    .progress
+        height: 5px
+        background: #F00
+
+.static-value
+    display: inline-block
+    float: left
+    width: 25%
+    text-align: center
+    padding: 10px 0
+    background: #999
+
+    .icon
+        display: block
+        margin: 0 auto
+        width: 42px
+        height: 42px
+        background-color: #F00
+
+    .label
+        display: inline-block
+        padding: 12px 10px 0
