Update canvas layers

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -322,4 +322,5 @@ body
             top: -12px
         
         &:focus
-            outline: none
+            outline: none#defaultCanvas1
+    z-index: -1
