Actually update canvas layers

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -322,5 +322,7 @@ body
             top: -12px
         
         &:focus
-            outline: none#defaultCanvas1
+            outline: none
+
+#defaultCanvas1
     z-index: -1
