Implemented basic scaling

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -217,7 +217,7 @@ body
 
     .amount
         font-weight: 100
-        font-size: 32px
+        font-size: 26px
 
     .unit
         font-weight: 100
@@ -348,5 +348,11 @@ body
         &:focus
             outline: none
 
+#defaultCanvas0
+    position: relative
+    left: -50px
+
 #defaultCanvas1
     z-index: -1
+    position: relative
+    left: -50px
