Added functionality to the 'average car charge' bar in the sidebar

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -180,6 +180,7 @@ body
             position: relative
             top: -1px
             +glow(10px, #FFF)
+            +animation(250ms)
 
 .columns
     display: inline-block
