Updated simulation - Fixed truck input bug - Removed ugly day / night indicator - Added padding to the sidebar - Fixed truck uptime parameter

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -60,6 +60,7 @@ body
     color: #A5B1BD
     overflow-y: auto
     z-index: 999
+    padding-bottom: 15px
 
     h1
         color: #FFF
@@ -199,7 +200,7 @@ body
         float: right
         font-size: 18px
         font-weight: 100
-        padding-top: 5px
+        padding-top: 7px
 
     // .label
     //     display: block
